# StarYokina

./: .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
hoshimiya/plugins/bilibili_live_manager/: __init__.py  command.py  data.json.example  utils.py
hoshimiya/plugins/hoshimiya_groupverify/: __init__.py  command.py  model.py
hoshimiya/plugins/hoshimiya_llmchat/: __init__.py  ai_chat.py  config.py  utils.py
hoshimiya/plugins/hoshimiya_pcl2/: __init__.py  command.py  model.py
hoshimiya/plugins/hoshimiya_qq_manager/: __init__.py  config.py  utils.py
hoshimiya/plugins/hoshimiya_ruozi/: __init__.py  command.py
hoshimiya/plugins/hoshimiya_today_wife/: __init__.py  command.py  config.py  model.py  uitls.py
hoshimiya/plugins/hoshimiya_tools/: __init__.py  command.py  config.py  utils.py
hoshimiya/plugins/logger_msg/: __init__.py
hoshimiya/plugins/vtube_button/: __init__.py  command.py  data.json  vtb_voice.py
hoshimiya/plugins/vtuber_button/: model.py  utils.py
hoshimiya/utils/CoreManager/: __init__.py  command.py  error.py  utils.py
hoshimiya/utils/DataBaseUtils/: data.py  model.py
hoshimiya/utils/Onebotv11Utils/: utils.py
hoshimiya/utils/ResourceManager/: utils.py
