[project]
name = "StarYokina"
version = "0.1.1"
description = "StarYokina"
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "nonebot2[fastapi,aiohttp,httpx,websockets]>=2.4.2,<2.5.0",
    "pydantic>=2.11.0,<3.0.0",
    "nonebot-adapter-console>=0.6.0,<1.0.0",
    "nonebot-adapter-onebot>=2.4.6,<2.5.0",
    "nonebot-adapter-qq>=1.6.4,<1.7.0",
    "nonebot-adapter-telegram>=0.1.0b20,<0.2.0",
    "nonebot-adapter-feishu>=2.6.0,<2.7.0",
    "nonebot-adapter-discord>=0.1.8,<1.0.0",
    "nonebot-plugin-apscheduler>=0.5.0,<1.0.0",
    "sqlalchemy>=2.0.40,<2.1.0",
    "asyncmy>=0.2.10,<1.0.0",
    "aiomysql>=0.2.0,<1.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "aiosqlite>=0.21.0,<1.0.0",
    "apscheduler>=3.11.0,<4.0.0",
    "aiofiles>=24.1.0,<25.0.0",
    "ujson>=5.10.0,<6.0.0",
    "lxml>=5.4.0,<6.0.0",
    "xmltodict>=0.14.2,<1.0.0",
    "msgpack>=1.0.8,<2.0.0",
    "numpy>=2.2.0,<3.0.0",
    "faiss-cpu>=1.11.0,<2.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "pandas>=2.2.0,<3.0.0",
    "matplotlib>=3.10.0,<4.0.0",
    "pillow>=11.2.0,<12.0.0",
    "imageio>=2.37.0,<3.0.0",
    "fonttools>=4.58.0,<5.0.0",
    "psutil>=7.0.0,<8.0.0",
    "pycryptodome>=3.23.0,<4.0.0",
    "py7zr>=1.0.0,<2.0.0",
    "pytz>=2025.2",
    "zhconv>=1.4.3,<2.0.0",
    "rapidfuzz>=3.13.0,<4.0.0",
    "emoji>=2.14.0,<3.0.0",
    "qrcode[pil]>=8.0.0,<9.0.0",
    "onedice==1.0.7",
    "jieba>=0.42.1,<1.0.0",
    "wordcloud>=1.9.4,<2.0.0",
    "openai>=1.97.1",
    "dbutils>=3.1.1",
]

[tool.nonebot]
plugins = []
plugin_dirs = ["hoshimiya/plugins", "src/plugins"]
builtin_plugins = []
